# script_generation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: WINDOWS.md  run-server.bat  run-server.ps1  run-server.sh  transcript-server.env.example  transcript-server.service
docs/: DOCUMENTATION.md  media-extraction-plan.md
src/transcript/: __init__.py  _remote_http.py  archive.py  audio.py  cli.py  device.py  engine.py  extract.py  extract_remote.py  extraction.py  extraction_store.py  formats.py  frames.py  ingest.py  music.py  ocr.py  podcast.py  remote.py  server.py  types.py  zip_safety.py
tests/: _golden_harness.py  test_archive.py  test_audio.py  test_byte_golden.py  test_cli.py  test_device.py  test_extract_remote.py  test_extraction.py  test_extraction_routes.py  test_extraction_store.py  test_formats.py  test_ingest.py  test_manual_captions.py  test_music.py  test_ocr_frames.py  test_podcast.py  test_public_api.py  test_real_media_smoke.py  test_remote_clients.py  test_server_hardening.py  test_zip_safety.py
