[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcript"
version = "0.1.0"
description = "Generate transcripts (with speaker labels) from any video/audio file or URL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "leeewayyy", email = "leewei036@gmail.com" }]
keywords = ["transcription", "whisper", "whisperx", "diarization", "subtitles", "speech-to-text"]

# No hard runtime dependencies: the base install stays lightweight so the Mac
# client (`pip install -e ".[client]"`) never pulls torch/whisperx. The heavy ML
# stack lives in the `server` extra; the thin client lives in `client`.
dependencies = []

[project.optional-dependencies]
# torch is intentionally NOT pinned here because the correct wheel is
# platform/CUDA-specific. See README for the right install command for your box.
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
# Local processing (the `transcript` CLI + `transcribe()` library). Install with
# `pip install -e ".[local]"`. torch is installed separately (see README).
local = [
    # ASR + alignment + diarization, all self-hosted.
    "whisperx>=3.1.1",
    # Source downloading (YouTube + thousands of sites).
    "yt-dlp>=2024.1.0",
]
# Install on the GPU host to expose the HTTP API: `pip install -e ".[server]"`.
# Builds on `local` and adds the web layer.
server = [
    "transcript[local]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # Media-extraction (image_note OCR, podcast RSS). All lazy-imported.
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "Pillow>=10.0",
    "numpy>=1.24",
    "feedparser>=6.0",
]
# Install on the Mac (client only) — no torch/whisperx needed:
#   pip install requests   (or  pip install -e ".[client]")
client = [
    "requests>=2.31",
]

[project.scripts]
transcript = "transcript.cli:main"
transcript-server = "transcript.server:main"
transcript-remote = "transcript.remote:main"
extract-remote = "transcript.extract_remote:main"

[project.urls]
Homepage = "https://github.com/leeewayyy/transcript"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
