[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcript"
dynamic = ["version"]
description = "Generate transcripts (with speaker labels) from any video/audio file or URL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "leeewayyy", email = "leewei036@gmail.com" }]
keywords = ["transcription", "whisper", "whisperx", "diarization", "subtitles", "speech-to-text"]

# No hard runtime dependencies: the base install stays lightweight so the Mac
# client (`pip install -e ".[client]"`) never pulls torch/whisperx. The heavy ML
# stack lives in the `server` extra; the thin client lives in `client`.
dependencies = []

[project.optional-dependencies]
# torch is intentionally NOT pinned here because the correct wheel is
# platform/CUDA-specific. See README for the right install command for your box.
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    # The test suite drives the FastAPI app + TestClient (which needs httpx) and
    # multipart uploads. These are light web deps — NOT the heavy ML stack — so the
    # full suite runs under `pip install -e ".[dev]"` without torch/whisperx.
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "requests>=2.31",
]
# Local processing (the `transcript` CLI + `transcribe()` library). Install with
# `pip install -e ".[local]"`. torch is installed separately (see README).
local = [
    # ASR + alignment + diarization, all self-hosted.
    "whisperx>=3.1.1",
    # Source downloading (YouTube + thousands of sites).
    "yt-dlp>=2024.1.0",
]
# Music tagging (Segment.music). Deliberately NOT in `local`/`server`:
# inaSpeechSegmenter pulls tensorflow[and-cuda] + onnxruntime-gpu, which
# conflicts with the pinned torch/cu128 stack. transcribe() degrades
# gracefully without it, so only install this where the TF stack resolves.
music = [
    "inaSpeechSegmenter>=0.7",
]
# Install on the GPU host to expose the HTTP API: `pip install -e ".[server]"`.
# Builds on `local` and adds the web layer.
server = [
    "transcript[local]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # Media-extraction (image_note OCR, podcast RSS). All lazy-imported.
    # Pinned <3: PaddleOCR 3.x renamed the constructor kwargs (show_log removed,
    # use_angle_cls -> use_textline_orientation, det_limit_side_len ->
    # text_det_limit_side_len, model-dir args) and changed the .ocr() result shape.
    # ocr.py + OCR_PARAMS target the 2.x API; bumping needs a deliberate port.
    "paddleocr>=2.7,<3",
    # paddlepaddle pinned <3 to match paddleocr 2.x: the 2.x inference code crashes
    # on the 3.x runtime ("OneDnnContext does not have the input Filter" in
    # fused_conv2d). The pair must move together.
    "paddlepaddle>=2.6,<3",
    "Pillow>=10.0",
    "numpy>=1.24",
    "feedparser>=6.0",
]
# Install on the Mac (client only) — no torch/whisperx needed:
#   pip install requests   (or  pip install -e ".[client]")
client = [
    "requests>=2.31",
]

[project.scripts]
transcript = "transcript.cli:main"
transcript-server = "transcript.server:main"
transcript-remote = "transcript.remote:main"
extract-remote = "transcript.extract_remote:main"

[project.urls]
Homepage = "https://github.com/leeewayyy/transcript"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript"]

[tool.hatch.version]
path = "src/transcript/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
